remove cron, and use file for sessions
